# hpv-progression-model

./: .copier-answers.yml  .gitignore  LICENSE  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
config/: ruff.toml
docs/: reference.md
examples/: messaging_intervention.html  messaging_intervention.py
scripts/: other_hr_hpv_prevalences.py
seed/: disease_duration.yaml  gbd_mortality.csvy  incidence_by_age.csvy  natural_history_params.yaml  prevalences.yaml  reference_life_table.csvy  survival_curves.yaml
src/hpv_progression_model/: __init__.py  __main__.py  cli.py  common.py  debug.py  evaluation.py  model.py  params.py
tests/: __init__.py  model.py  params.py  test_cli.py
